fix: dashboard title margin on mobile

--- a/sass/account/layout.module.sass
+++ b/sass/account/layout.module.sass
@@ -38,7 +38,7 @@ section.box
                 &.normal
                     position: fixed
                     z-index: 999
-                    padding: 10px 5px
+                    padding: 12px 5px
                     width: calc( 100% - 5px * 2 )
                     bottom: 0
                     left: 0
@@ -65,6 +65,7 @@ section.box
                         flex-direction: column
                         font-weight: 400
                         font-size: 12px
+                        text-align: center
                         & svg
                             padding: 6px 14px
                             border-radius: 50px
